--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "TODO https://github.com/tim-stephenson/TimmyFlights#readme",
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "nodemailer": "^6.7.8"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/node": "^18.7.14",
+    "@types/nodemailer": "^6.4.5",
     "typescript": "^4.8.2"
   }
 }
